--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "start": "npx webpack-dev-server --env.mode=development",
+    "build": "npx webpack",
+    "start-pro": "yarn build --env.mode=production",
+    "start-dev": "yarn build --env.mode=development"
   }
 }
